# BredholtPlugins

./: .gitignore  .gitmodules  CCMapper.sc  CMakeLists.txt  Chorus.sc  MagiskLooper.sc  PAF.sc  Pglitch.sc  Pgroove.sc  Phaser.sc  README.md  ResonatorBank.sc
Extensions/: Glitch.sc  PAF.sc  Pfugue.sc  Phaser.sc  Ploop.sc  ResonatorBank.sc  WavePackets.sc
Extensions/HelpSource/Classes/: Glitch.schelp  Ploop.schelp
HelpSource/Classes/: Pgroove.schelp
Plugins/MonoPhaser/: CMakeLists.txt  MonoPhaser.dsp
Plugins/MonoPhaser/sc/HelpSource/Classes/: MonoPhaser.schelp
